# project_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_EN.md  clean_all.bat  clean_all.sh  generate_presets.bat  generate_presets.sh
.github/workflows/: ci.yml
TestLib/: CMakeLists.txt  TestLib.cc
cmake/: CPackPreset.cmake  GeneralPreset.cmake  GeneratePresets.cmake  PrivatePreset.cmake
project1/: CMakeLists.txt  project1.cc
sharedLib1/: CMakeLists.txt
src/TestLib/: CMakeLists.txt
src/project1/: CMakeLists.txt  project1.cc
src/sharedLib1/: CMakeLists.txt  pch.h  sharedLib1.cc  sharedLib1.h  sharedLib1_export.h
src/staticLib1/: CMakeLists.txt
staticLib1/: CMakeLists.txt  staticLib1.cc  staticLib1.h
