cmake_minimum_required(VERSION 3.10)
set(PROJECT_TEMPLATE_VERSION 1.0.0)
project(project_template VERSION ${PROJECT_TEMPLATE_VERSION})
include(cmake/GeneralPreset.cmake)
include(cmake/CPackPreset.cmake)
enable_testing()

add_subdirectory(src/project1)
add_subdirectory(src/staticLib1)
add_subdirectory(src/sharedLib1)
add_subdirectory(src/TestLib)